--- a/demo/package.json
+++ b/demo/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "demo",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC",
+  "name": "Node_NogDB",
+  "version": "0.0.0",
+  "description": "",
+  "gypfile": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Ko_n",
+  "license": "",
   "dependencies": {
-    "Node_NogDB": "file:../addon"
+    "nan": "^2.3.3"
   }
 }
